--- a/index.html
+++ b/index.html
@@ -10,6 +10,64 @@
 </head>
 
 <body>
+    <section class="s-main">
+        <section class="a">
+            <div class="a-left-div half-width">
+                <div class="header-h">
+                    <h1>stay focused on</h1>
+                    <h1 class="color-orange">mission 2022</h1>
+                </div>
+                <p>
+                    orem ipsum dolor sit amet consectetur adipisicing elit. Odit est inventore magnam atque repudiandae
+                    deserunt soluta recusandae, eos expedita itaque quod amet possimus consectetur modi, sequi aliquam
+                    corporis facilis at? L
+
+                </p>
+                <a href="#" class="button">explore now</a>
+                <h5> scrol down to explore more about us</h5>
+            </div>
+            <div class="a-right-div half-width">
+                <img class="header-image" src="ac-removebg-preview.png" alt="">
+
+            </div>
+        </section>
+        <section class="b">
+            <div class="b-first">
+                <h1>my mission <span class="color-orange">2022</span></h1>
+            </div>
+        </section>
+        <section class="c">
+            <div class="c-a same-width">
+                <div class="same-margin">
+                    <img src=" my-bg.png" alt="">
+                    <h3>mission</h3>
+                    <p>orem ipsum dolor sit amet consectetur adipisicing elit. Odit est inventore magnam atque
+                        repudiandae
+                    </p>
+                </div>
+            </div>
+            <div class="c-b same-width">
+                <div class="same-margin">
+                    <img src=" my-bg.png" alt="">
+                    <h3>mission</h3>
+                    <p>orem ipsum dolor sit amet consectetur adipisicing elit. Odit est inventore magnam atque
+                        repudiandae
+                    </p>
+                </div>
+            </div>
+            <div class="c-c same-width">
+                <div class="same-margin">
+                    <img src="my-bg.png" alt="">
+                    <h3>mission</h3>
+                    <p>orem ipsum dolor sit amet consectetur adipisicing elit. Odit est inventore magnam atque
+                        repudiandae
+                    </p>
+                </div>
+            </div>
+
+        </section>
+
+    </section>
 
 </body>
 
