--- a/index.html
+++ b/index.html
@@ -66,6 +66,22 @@
             </div>
 
         </section>
+        <section class="d">
+            <div class="d-left">
+                <img src="my-bg.png" alt="">
+            </div>
+            <div class="d-right">
+                <h2>develop</h2>
+                <h1>without limits</h1>
+                <p>
+                    rem ipsum dolor sit amet consectetur adipisicing elit. Odit est inventore magnam atque
+                    repudiandaerem ipsum dolor sit amet consectetur adipisicing elit. Odit est inventore magnam atque
+                    repudiandae
+                </p>
+                <a href="#">red the ducomantition</a>
+            </div>
+
+        </section>
 
     </section>
 
