--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="c-b same-width">
                 <div class="same-margin">
                     <img src=" my-bg.png" alt="">
-                    <h3>mission</h3>
+                    <h3>vission</h3>
                     <p>orem ipsum dolor sit amet consectetur adipisicing elit. Odit est inventore magnam atque
                         repudiandae
                     </p>
@@ -58,7 +58,7 @@
             <div class="c-c same-width">
                 <div class="same-margin">
                     <img src="my-bg.png" alt="">
-                    <h3>mission</h3>
+                    <h3>goals</h3>
                     <p>orem ipsum dolor sit amet consectetur adipisicing elit. Odit est inventore magnam atque
                         repudiandae
                     </p>
@@ -71,7 +71,7 @@
                 <img src="my-bg.png" alt="">
             </div>
             <div class="d-right">
-                <h2>develop</h2>
+                <h1>develop</h1>
                 <h1>without limits</h1>
                 <p>
                     rem ipsum dolor sit amet consectetur adipisicing elit. Odit est inventore magnam atque
@@ -82,6 +82,48 @@
             </div>
 
         </section>
+        <section class="e">
+            <div class="e-left">
+                <h1>know our</h1>
+                <h1>global community</h1>
+                <p>rem ipsum dolor sit amet consectetur adipisicing elit. Odit est inventore magnam atque
+                    repudiandaerem ipsum dolor sit amet consectetur adipisicing elit. Odit est inventore magnam atque
+                    repudiandae</p>
+                <a href="#">red the ducomantition</a>
+            </div>
+            <div class="e-right">
+                <img src="my-bg.png" alt="">
+            </div>
+
+        </section>
+        <section class="f">
+            <div>
+                <h1>build <span class="color-orange">corona aplication</span></h1>
+            </div>
+
+        </section>
+        <section class="d">
+            <div class="d-left">
+                <img src="my-bg.png" alt="">
+            </div>
+            <div class="d-right">
+                <h1>stay safe with</h1>
+                <h1>go <span class="color-orange">corona</span></h1>
+                <p>
+                    rem ipsum dolor sit amet consectetur adipisicing elit. Odit est inventore magnam atque
+                    repudiandaerem ipsum dolor sit amet consectetur adipisicing elit. Odit est inventore magnam atque
+                    repudiandae
+                </p>
+                <a href="#">app fetures</a>
+            </div>
+
+        </section>
+        <footer>
+            <div class="foo-s">
+                <h1>mission <span class="foo-c">2022</span> </h1>
+                <h4>hard work perswverancs,determination 2022</h4>
+            </div>
+        </footer>
 
     </section>
 
