--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
                     <h1 class="color-orange">mission 2022</h1>
                 </div>
                 <p>
-                    orem ipsum dolor sit amet consectetur adipisicing elit. Odit est inventore magnam atque repudiandae
-                    deserunt soluta recusandae, eos expedita itaque quod amet possimus consectetur modi, sequi aliquam
-                    corporis facilis at? L
+                    i am very attentive and mantaly strong and very hardworking
+                    and i want to go far and learn a lot
 
                 </p>
                 <a href="#" class="button">explore now</a>
@@ -39,28 +38,34 @@
         <section class="c">
             <div class="c-a same-width">
                 <div class="same-margin">
-                    <img src=" my-bg.png" alt="">
+                    <img src=" download.jpg" alt="">
                     <h3>mission</h3>
-                    <p>orem ipsum dolor sit amet consectetur adipisicing elit. Odit est inventore magnam atque
-                        repudiandae
+                    <p>my mission is to be good
+                        being a web developer
+                        and being a web developer
+                        in aprofessional way being a
+                        programmer becuse i like
+                        programming a lot
                     </p>
                 </div>
             </div>
             <div class="c-b same-width">
                 <div class="same-margin">
-                    <img src=" my-bg.png" alt="">
+                    <img src=" download (1).jpg" alt="">
                     <h3>vission</h3>
-                    <p>orem ipsum dolor sit amet consectetur adipisicing elit. Odit est inventore magnam atque
-                        repudiandae
+                    <p>my vission is that i do
+                        well myself i will learn
+                        and mahabub jhanker brother like
+                        i teach everyone like a brothe
                     </p>
                 </div>
             </div>
             <div class="c-c same-width">
                 <div class="same-margin">
-                    <img src="my-bg.png" alt="">
+                    <img src="istockphoto-1145904609-170667a.jpg" alt="">
                     <h3>goals</h3>
-                    <p>orem ipsum dolor sit amet consectetur adipisicing elit. Odit est inventore magnam atque
-                        repudiandae
+                    <p>my goals in an islamic way
+                        everyone works in an online it organization can
                     </p>
                 </div>
             </div>
