--- a/index.html
+++ b/index.html
@@ -73,15 +73,18 @@
         </section>
         <section class="d">
             <div class="d-left">
-                <img src="my-bg.png" alt="">
+                <img src="istockphoto-1248384506-612x612.jpg" alt="">
             </div>
             <div class="d-right">
                 <h1>develop</h1>
                 <h1>without limits</h1>
-                <p>
-                    rem ipsum dolor sit amet consectetur adipisicing elit. Odit est inventore magnam atque
-                    repudiandaerem ipsum dolor sit amet consectetur adipisicing elit. Odit est inventore magnam atque
-                    repudiandae
+                <p> that i do
+                    well myself i will learn
+                    and mahabub jhanker brother like
+                    i teach everyone like a brothe
+                    well myself i will learn
+                    and mahabub jhanker brother like
+                    i teach everyone like a brothe
                 </p>
                 <a href="#">red the ducomantition</a>
             </div>
@@ -91,33 +94,37 @@
             <div class="e-left">
                 <h1>know our</h1>
                 <h1>global community</h1>
-                <p>rem ipsum dolor sit amet consectetur adipisicing elit. Odit est inventore magnam atque
-                    repudiandaerem ipsum dolor sit amet consectetur adipisicing elit. Odit est inventore magnam atque
-                    repudiandae</p>
+                <p>its to be good being a web developer
+                    and being a web developer
+                    in aprofessional way being a
+                    programmer becuse i like
+                    programming a lot</p>
                 <a href="#">red the ducomantition</a>
             </div>
             <div class="e-right">
-                <img src="my-bg.png" alt="">
+                <img src="akash.jpg" alt="">
             </div>
 
         </section>
         <section class="f">
             <div>
-                <h1>build <span class="color-orange">corona aplication</span></h1>
+                <h1>ways to <span class="color-orange">stay safe</span></h1>
             </div>
 
         </section>
         <section class="d">
             <div class="d-left">
-                <img src="my-bg.png" alt="">
+                <img src="download (2).jpg" alt="">
             </div>
             <div class="d-right">
                 <h1>stay safe with</h1>
-                <h1>go <span class="color-orange">corona</span></h1>
+                <h1>stay<span class="color-orange">homw </span></h1>
                 <p>
-                    rem ipsum dolor sit amet consectetur adipisicing elit. Odit est inventore magnam atque
-                    repudiandaerem ipsum dolor sit amet consectetur adipisicing elit. Odit est inventore magnam atque
-                    repudiandae
+                    you must always wear a mask. you must not
+                    touch your nose .you must always wash your
+                    hands before eating . you must always be at
+                    home.
+
                 </p>
                 <a href="#">app fetures</a>
             </div>
