--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <section class="s-main">
+        <!--start section 1-->
         <section class="a">
             <div class="a-left-div half-width">
                 <div class="header-h">
@@ -30,11 +31,13 @@
 
             </div>
         </section>
+        <!--start section 2-->
         <section class="b">
             <div class="b-first">
                 <h1>my mission <span class="color-orange">2022</span></h1>
             </div>
         </section>
+        <!--start section 3-->
         <section class="c">
             <div class="c-a same-width">
                 <div class="same-margin">
@@ -71,6 +74,7 @@
             </div>
 
         </section>
+        <!--start section 4-->
         <section class="d">
             <div class="d-left">
                 <img src="istockphoto-1248384506-612x612.jpg" alt="">
@@ -90,6 +94,7 @@
             </div>
 
         </section>
+        <!--start section 5-->
         <section class="e">
             <div class="e-left">
                 <h1>know our</h1>
@@ -106,6 +111,7 @@
             </div>
 
         </section>
+        <!--start section 6-->
         <section class="f">
             <div>
                 <h1>ways to <span class="color-orange">stay safe</span></h1>
@@ -130,6 +136,7 @@
             </div>
 
         </section>
+        <!--footer section start-->
         <footer>
             <div class="foo-s">
                 <h1>mission <span class="foo-c">2022</span> </h1>
